--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
     "@babel/core": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
     "@codemirror/lang-css": "^6.0.0",
-    "@mdx-js/rollup": "^2.1.3",
-    "@types/rc-slider": "^9.3.1",
     "@uiw/react-codemirror": "^4.12.1",
     "antd": "^4.23.0",
     "codemirror": "^6.0.1",
-    "rc-slider": "^10.0.1",
+    "immer": "^9.0.15",
+    "lodash": "^4.17.21",
+    "lz-string": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "recoil": "^0.7.5",
     "sucrase": "^3.25.0"
   },
   "devDependencies": {
+    "@mdx-js/rollup": "^2.1.3",
     "@types/babel__core": "^7.1.19",
+    "@types/lodash": "^4.14.185",
+    "@types/lz-string": "^1.3.34",
     "@types/mdx": "^2.0.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
