--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-  "name": "vite-project",
-  "private": true,
+  "name": "website",
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "docusaurus": "docusaurus",
+    "start": "docusaurus start",
+    "dev": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-react": "^7.18.6",
-    "@codemirror/lang-css": "^6.0.0",
-    "@uiw/react-codemirror": "^4.12.1",
-    "antd": "^4.23.0",
-    "codemirror": "^6.0.1",
-    "immer": "^9.0.15",
-    "lodash": "^4.17.21",
-    "lz-string": "^1.4.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "sucrase": "^3.25.0"
+    "@code-hike/mdx": "^0.7.4",
+    "@docusaurus/core": "2.1.0",
+    "@docusaurus/preset-classic": "2.1.0",
+    "@mdx-js/react": "^2.0.0",
+    "clsx": "^1.2.1",
+    "docusaurus-theme-mdx-v2": "^0.1.2",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "shiki": "^0.11.1"
   },
   "devDependencies": {
-    "@mdx-js/rollup": "^2.1.3",
-    "@types/babel__core": "^7.1.19",
-    "@types/lodash": "^4.14.185",
-    "@types/lz-string": "^1.3.34",
-    "@types/mdx": "^2.0.2",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@unocss/preset-wind": "^0.45.15",
-    "@vitejs/plugin-react": "^2.0.1",
-    "less": "^4.1.3",
-    "rollup-plugin-visualizer": "^5.8.1",
-    "typescript": "^4.6.4",
-    "unocss": "^0.45.15",
-    "vite": "^3.0.7",
-    "vite-plugin-imp": "^2.3.0"
+    "@docusaurus/module-type-aliases": "2.1.0",
+    "@tsconfig/docusaurus": "^1.0.5",
+    "typescript": "^4.7.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "engines": {
+    "node": ">=16.14"
   }
 }
