--- a/.github/workflows/loy.yml
+++ b/.github/workflows/loy.yml
@@ -12,7 +12,7 @@ jobs:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -22,6 +22,7 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build website
         run: yarn build
+        run: yarn export
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
@@ -36,5 +37,5 @@ jobs:
           # https://github.com/actions/checkout/issues/13#issuecomment-724415212
           # The GH actions bot is used by default if you didn't specify the two fields.
           # You can swap them out with your own user credentials.
-          user_name: github-actions[bot]
+          user_name: github-actions[bot] 
           user_email: 41898282+github-actions[bot]@users.noreply.github.com
