--- a/.github/workflows/loy.yml
+++ b/.github/workflows/loy.yml
@@ -22,6 +22,8 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build website
         run: yarn build
+      - run: yarn export
+      - run: touch out/.nojekyll
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
