--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.3.1",
     "antd": "^4.24.0",
+    "dayjs": "^1.11.7",
+    "echarts": "^5.4.1",
     "esbuild": "^0.15.10",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
