--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.3.1",
     "antd": "^4.24.0",
+    "bignumber.js": "^9.1.1",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
     "esbuild": "^0.15.10",
