--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
+    "sass": "^1.57.1",
     "shiki": "^0.11.1",
     "string-width": "^5.1.2"
   },
