--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@mdx-js/loader": "^2.1.3",
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.3.1",
-    "antd": "^4.24.0",
     "bignumber.js": "^9.1.1",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
@@ -35,8 +34,10 @@
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@unocss/webpack": "^0.49.4",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "unocss": "^0.49.4"
   }
 }
