--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "js-base64": "^3.7.5",
     "js-yaml": "^4.1.0",
     "mdx-bundler": "^9.0.1",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.57.1",
