--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "string-width": "^5.1.2"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@unocss/webpack": "^0.49.4",
     "esbuild-loader": "^3.0.0",
     "eslint": "8.24.0",
     "eslint-config-next": "13.1.6",
     "typescript": "4.8.4",
-    "unocss": "^0.49.4"
+    "windicss": "^3.5.6",
+    "windicss-webpack-plugin": "^1.7.8"
   }
 }
