--- a/.github/workflows/loy.yml
+++ b/.github/workflows/loy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: update submodules
         run: git submodule update --init --remote
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
       - name: Build website
         run: pnpm build
       - run: pnpm export
