--- a/packages/next-server/package.json
+++ b/packages/next-server/package.json
@@ -33,6 +33,7 @@
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "esbuild-loader": "^3.0.1",
     "eslint": "8.24.0",
     "eslint-config-next": "13.1.6",
     "typescript": "4.8.4",
