--- a/packages/next-server/package.json
+++ b/packages/next-server/package.json
@@ -30,6 +30,7 @@
     "string-width": "^5.1.2"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^2.3.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
