--- a/.github/workflows/loy.yml
+++ b/.github/workflows/loy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build website
         run: pnpm build
       - run: pnpm export
-      - run: touch out/.nojekyll
+      - run: touch ./packages/next-server/out/.nojekyll
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
