--- a/packages/next-server/package.json
+++ b/packages/next-server/package.json
@@ -18,7 +18,7 @@
     "echarts": "^5.4.1",
     "gray-matter": "^4.0.3",
     "js-base64": "^3.7.5",
-    "mdx": "workspace:*",
+    "js-yaml": "^4.1.0",
     "mdx-bundler": "^9.2.1",
     "next": "^12",
     "react": "^17.0.2",
@@ -27,10 +27,12 @@
     "remark-gfm": "^3.0.1",
     "sass": "^1.57.1",
     "shiki": "^0.11.1",
-    "string-width": "^5.1.2"
+    "string-width": "^5.1.2",
+    "sucrase": "^3.29.0"
   },
   "devDependencies": {
     "@mdx-js/loader": "^2.3.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
