--- a/.github/workflows/loy.yml
+++ b/.github/workflows/loy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build website
         run: pnpm build
       - run: pnpm export
-      - run: touch ./packages/next-server/out/.nojekyll
+      - run: touch out/.nojekyll
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
@@ -37,7 +37,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Build output to publish to the `gh-pages` branch:
-          publish_dir: ./packages/next-server/out
+          publish_dir: ./out
           # The following lines assign commit authorship to the official
           # GH-Actions bot for deploys to `gh-pages` branch:
           # https://github.com/actions/checkout/issues/13#issuecomment-724415212
