--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^12.3.1",
     "bignumber.js": "^9.1.1",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "echarts": "^5.4.1",
     "gray-matter": "^4.0.3",
     "js-base64": "^3.7.5",
